# modelarts

./: .gitignore  .zuul.yaml  requirements.txt  setup.cfg  tox.ini  zuul.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
api-ref/source/: api_overview.rst  change_history.rst  conf.py  index.rst
api-ref/source/ai_application_management/: creating_an_ai_application.rst  deleting_an_ai_application.rst  index.rst  obtaining_details_about_an_ai_application.rst  obtaining_the_model_runtime.rst  querying_the_ai_application_list.rst
api-ref/source/appendix/: error_codes.rst  index.rst  obtaining_a_project_id_and_name.rst  obtaining_a_tenant_name_and_id.rst  status_code.rst
api-ref/source/application_cases/: creating_a_training_job_using_the_tensorflow_framework.rst  index.rst
api-ref/source/authorization_management/: configuring_authorization.rst  creating_a_modelarts_agency.rst  deleting_authorization.rst  index.rst  viewing_an_authorization_list.rst
api-ref/source/before_you_start/: api_calling.rst  basic_concepts.rst  constraints.rst  endpoint.rst  endpoints.rst  index.rst  overview.rst
api-ref/source/calling_apis/: authentication.rst  index.rst  making_an_api_request.rst  response.rst
api-ref/source/common_parameters/: error_codes.rst  index.rst  obtaining_a_project_id.rst  obtaining_a_project_id_and_name.rst  obtaining_a_project_name.rst  obtaining_a_tenant_name_and_id.rst  obtaining_a_username_and_id.rst  (+3 more)
doc/source/: conf.py  index.rst
umn/source/: change_history.rst  conf.py  conf.py.rej  getting_started_with_modelarts.rst  index.rst  resource_pools.rst
(+1643 files in other folders)
